fail_crate/tests/public_instead_of_pub.rs
use inew::New;

#[derive(New)]
#[new(public)]
struct A;

fn main() {}
